--- a/src/app/pages/dashboards/project-control/project-control.component.html
+++ b/src/app/pages/dashboards/project-control/project-control.component.html
@@ -31,7 +31,7 @@
                                 <div class="col-sm-auto">
                                     <div class="d-md-flex justify-content-sm-end gap-2">
                                         <div class="search-box ms-md-2 flex-shrink-0 mb-3 mb-md-0">
-                                            <input type="text" class="form-control" style="width: 400px; margin-right: 30px;" placeholder="Buscar un Elemento">
+                                            <input type="text" class="form-control" style="width: 400px; margin-right: 30px;" placeholder="Buscar un Elemento" [(ngModel)]="term">
                                             <i class="ri-search-line search-icon"></i>
                                         </div>
                                     </div>
@@ -46,7 +46,7 @@
                 
                                     <div *ngIf="installations_data.length > 0">            
                                             <div class="list-group">
-                                                <ng-container *ngFor="let ig of installations_group">
+                                                <ng-container *ngFor="let ig of installations_group | filter:term;">
                                                     <h4 style="color: #405189;">{{ig.area}}</h4>
                                                     <p>{{ig.descripcion}}</p>
                 
